# paddle_ocr_flutter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  common.h  native.cpp  native.h  ocr_crnn_process.cpp  ocr_ppredictor.cpp  ocr_ppredictor.h
android/src/main/kotlin/com/example/paddle_ocr_flutter/: PaddleOcrFlutterPlugin.kt
android/src/test/kotlin/com/example/paddle_ocr_flutter/: PaddleOcrFlutterPluginTest.kt
assets/models/: cls_v2.onnx
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/paddle_ocr_flutter_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: paddle_ocr_flutter.dart  paddle_ocr_flutter_method_channel.dart  paddle_ocr_flutter_platform_interface.dart
test/: paddle_ocr_flutter_method_channel_test.dart  paddle_ocr_flutter_test.dart
